gcc: typos, formulations & cie

--- a/prologin/gcc/templates/gcc/editions/index.html
+++ b/prologin/gcc/templates/gcc/editions/index.html
@@ -17,7 +17,7 @@
 					<div class="col-8 col-8-medium off-0-small col-12-small">
 						<div style="min-height: 100%; text-align:left;">
 							<p style="font-size: 1.1em;">
-								Cette année, l'organisation d’un stage Girls Can Code! à <strong>Nantes</strong> est délégué à l’association Adn-ouest Atlantic 2020, Prologin quant-à elle organise à nouveau les stages de <strong>Paris</strong> et <strong>Lyon</strong>.<br />
+								Cette année, l'organisation d’un stage Girls Can Code! à <strong>Nantes</strong> est délégué à l’association Adn-ouest Atlantic 2020, Prologin quant à elle organise à nouveau les stages de <strong>Paris</strong> et <strong>Lyon</strong>.<br />
 								Ces stages qui accueillent au total <strong>70 participantes</strong> voient l’arrivée d’un TP sur les <strong>microcontrôleurs microbit</strong> qui, avec le TP jeux vidéo, donnent la possibilité d’exprimer sa créativité.
 							</p>
 							<div style="overflow-x: hidden; white-space: nowrap;">
@@ -40,7 +40,7 @@
 				<div class="off-1 col-8 col-8-medium off-0-small col-12-small">
 					<div style="min-height: 100%; text-align:left;">
 						<p style="font-size: 1.1em;">
-							En 2017, Prologin se lance un grand défi, l’organisation de 3 stages Girls Can Code!, un à <strong>Bordeaux</strong> en juillet et deux et ceux de <strong>Paris</strong> et <strong>Lyon</strong> en parallèle la dernière semaine aout, pour un total de <strong>52 participantes</strong> !
+							En 2017, Prologin se lance un grand défi, l’organisation de 3 stages Girls Can Code!, un à <strong>Bordeaux</strong> en juillet et deux autres à <strong>Paris</strong> et <strong>Lyon</strong> en parallèle pendant la dernière semaine d'août, ils ont réuni un total de <strong>52 participantes</strong> !
 						</p>
 						<div style="overflow-x: hidden; white-space: nowrap;">
 							<a href="">
@@ -66,7 +66,8 @@
 				<div class="off-2-large col-8-large off-1 col-10 off-1-medium col-10-medium off-0-small col-12-small">
 					<div style="min-height: 100%; text-align: center;">
 						<p style="font-size: 1.1em;">
-							Les <strong>18 participantes</strong> avaient cette année des niveaux très hétéroclytes donc le stage c’est organisé en groupe de niveau et le stage à vue l’arrivée d’un <strong>TP réseau</strong> où l’on crée un petit client de chat.
+							Les <strong>18 participantes</strong> avaient cette année des niveaux très hétéroclytes, le stage s’est donc organisé par groupes de niveaux.
+							Le stage a vue l’arrivée d’un <strong>TP réseau</strong> qui consiste en la création d'un petit client de messagerie.
 						</p>
 						<a href="https://flic.kr/s/aHskCyYBke">
 							<img style="max-height: 400px; max-width: 100%;" src="{% static 'gcc/img/photos/2018/01.jpg' %}" />
@@ -85,7 +86,7 @@
 				<div class="off-2-large col-8-large off-1 col-10 off-1-medium col-10-medium off-0-small col-12-small">
 					<div style="min-height: 100%; text-align: center;">
 						<p style="font-size: 1.1em;">
-							En 2015, c’est <strong>12 filles</strong> qui ont pris part à un stage qui initie pour la première fois à des sujets comme le <strong>Web</strong>, la création d’un petit <strong>jeux vidéo</strong> avec la librairie Pygame ou encore l’OS <strong>linux</strong>.
+							En 2015, c’est <strong>12 filles</strong> qui ont pris part à un stage qui initie pour la première fois à des sujets sur le <strong>Web</strong>, la création d’un petit <strong>jeux vidéo</strong> avec la bibliothèque Pygame ou encore sur l’OS <strong>linux</strong>.
 						</p>
 						<a href="https://flic.kr/s/aHskjAFpwt">
 							<img style="max-height: 400px; max-width: 100%;" src="{% static 'gcc/img/photos/2018/01.jpg' %}" />
@@ -104,8 +105,9 @@
 				<div class="off-2-large col-8-large off-1 col-10 off-1-medium col-10-medium off-0-small col-12-small">
 					<div style="text-align: center;">
 						<p style="font-size: 1.1em;">
-							Ce premier stage, a accueilli <strong>10 participantes</strong> pour 5 jours de programmation.
-							Centré autour de l'algorithmique, on y a appris à manipuler des structures de données abstraites comme par exemples les <strong>graphes</strong>. Dans les participantes, 2 en particulier ont continué en informatique et sont devenue organisatrices des stages !
+							Ce premier stage a accueilli <strong>10 participantes</strong> pendant 5 jours d'initiation à la programmation.
+							Centré autour de l'algorithmique, on y a appris à manipuler des structures de données abstraites, comme par exemples les <strong>graphes</strong>.
+							Parmi les participantes, deux en particulier ont poursuivi leurs études dans l'informatique et sont devenues organisatrices des stages !
 						</p>
 					</div>
 					<img style="max-height: 400px; max-width: 100%;" src="{% static 'gcc/img/photos/2018/01.jpg' %}" />
