--- a/prologin/gcc/templates/gcc/ressources.html
+++ b/prologin/gcc/templates/gcc/ressources.html
@@ -9,7 +9,8 @@
 		<div class="row">
 			<div class="off-2-large col-8-large off-1 col-10 off-1-medium col-10-medium off-0-small col-12-small">
 				<p class="style2" style="font-size: 1.5em; padding: 20px; font-weight: normal;">
-					Beaucoup de ressources sur internet sont disponible pour te permettre de découvrir l’informatique mais il est parfois difficile de s'orienter dans tous les contenus, nous détaillons quelques ressources particulièrement intéressantes.
+					Beaucoup de ressources sur internet sont disponibles pour te permettre de découvrir l’informatique mais il est parfois difficile de s'orienter face à la quantité d'informations disponibles.
+					Nous détaillons ici quelques ressources particulièrement intéressantes pour débuter et s'entrainer.
 				</p>
 			</div>
 		</div>
@@ -23,11 +24,12 @@
 				<div class="off-2-large col-8-large off-1-medium col-10-medium off-0-small col-12-small">
 					<p>
 						Coder c’est décrire des opérations que la machine exécutera, et pour communiquer avec la machine on doit choisir au préalable dans quel langage on va lui parler.
-						Il existe de très nombreux langages de programmation avec chacun leurs spécificités.
+						Il existe de très nombreux langages de programmation avec chacun ses spécificités.
 					</p>
 					<p>
 						Il est important de savoir le langage dans lequel on souhaite commencer à programmer avant de se lancer, on apprends à programmer dans un langage.
-						Dans les stages nous enseignons principalement le Python (Python 3), nous le recommandons. C’est un langage assez facile à prendre en main (comparé à d’autre...) et qui a de nombreuses utilisations, par exemple il est utilisé pour coder Youtube.
+						Pendant les stages nous enseignons principalement le Python, que nous recommandons pour débuter.
+						C’est un langage assez facile à prendre en main (comparé à d’autres...) et qui a de nombreuses utilisations, par exemple il est utilisé dans Youtube.
 					</p>
 				</div>
 			</div>
@@ -85,7 +87,7 @@
 				<div class="off-2-large col-8-large off-1-medium col-10-medium off-0-small col-12-small">
 					<p>
 						L’avantage quand on apprend l'informatique c’est qu'on peut vraiment en faire ce qu’on veut.
-						Il y a beaucoup de sous domaines et d'applications en informatique et pour continuer à coder c’est beaucoup plus motivant de trouver quelque chose qui nous plait.
+						Il y a beaucoup de sous domaines et d'applications en informatique et pour continuer à coder c’est motivant de trouver quelque chose qui nous plait.
 						Voilà quelques exemples :
 					</p>
 
@@ -99,7 +101,7 @@
 						<div class="col-9 col-8-medium off-0-small col-12-small">
 							<h3><a href="{{url}}">Django girls</a></h3>
 							<p>
-								Elles ont fait un tutoriel pour la création d’un blog en python avec un framework qui s’appelle django.
+								Elles ont fait un tutoriel pour la création d’un blog en python avec un framework qui s’appel django.
 								Il a été traduit entièrement en français et est très accessible.
 								Django est un outil qui permet beaucoup de chose, les site de GCC! et Prologin utilisent d’ailleurs ce framework.
 							</p>
@@ -111,11 +113,11 @@
 							</a>
 						</div>
 						<div class="col-9 col-8-medium off-0-small col-12-small">
-							<h3><a href="{% url 'home' %}">Stage gratuit</a></h3>
+							<h3><a href="{% url 'home' %}">Prologin</a></h3>
 							<p>
-								C’est le nom de l’association qui organise les stages mais elle organise aussi un concours d’informatique.
-								Sur le site tu peux trouver les archives des années précédentes.
-								Ce sont des petits problèmes qui donnent une entrée et demandent une sortie et c’est à toi d’écrire le code pour obtenir la sortie à partir de l’entrée !
+								C’est le nom de l’association qui organise les stages mais aussi un concours d’informatique destiné aux jeunes de moins de 20 ans.
+								Sur son site tu peux trouver les archives des exercices des années précédentes.
+								Ce sont des petits problèmes qui donnent une entrée et demandent une réponse précise, c’est à toi d’écrire programme qui trouve la réponse !
 							</p>
 						</div>
 					</div>
