gcc: fix des demis annoncées

--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -35,9 +35,7 @@
 				Prochains stages:<br />
 				<small style="font-size: 0.7em; font-weight: normal; line-height: 1;">
 					Paris, la semaine du <em>23 octobre 2018</em><br />
-					Lyon, la semaine du <em>23 octobre 2018</em><br />
-					Bordeaux, la semaine du <em>23 octobre 2018</em><br />
-					Paris, la semaine du <em>23 octobre 2018</em>
+					Lyon, la semaine du <em>23 octobre 2018</em>
 				</small>
 			</p>
 
