gcc: fix typos, grammar, formulation

--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -68,7 +68,7 @@
 							<div class="row">
 								<div class="col-6 col-12-small">
 									<section>
-										<h3 class="icon fa-home">Addresse</h3>
+										<h3 class="icon fa-home">Adresse</h3>
 										<p>
 											Association Prologin<br />
 											14-15 Rue Voltaire<br />
