--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -9,7 +9,7 @@
 		<div class="row">
 			<div class="off-2-large col-8-large off-1 col-10 off-1-medium col-10-medium off-0-small col-12-small">
 				<p class="style3" style="font-size: 1.5em; padding: 20px; font-weight: normal;">
-					Le site est actuellement en phase de rénovation, la connection au site et donc les inscriptions sont pour l'instant <strong>fermées</strong>.
+					Le site est actuellement en phase de rénovation, la connexion au site et donc les inscriptions sont pour l'instant <strong>fermées</strong>.
 				</p>
 				<p class="style3" style="font-size: 1.5em; padding: 20px; font-weight: normal;">
 					Si vous souhaitez être informé dès que les inscriptions sont ouvertes, n'hésitez pas à vous inscrire à la <a href="#newsletter">newsletter</a>.
@@ -23,13 +23,13 @@
 		<div class="title">Les stages</div>
 		<div class="container">
 			<p class="style1">
-				Les stages Girls Can Code! c’est une semaine d'initiation à la programmation pour les lycéennes et collégiennes.
+				Les stages Girls Can Code! c’est une semaine d'initiation à la programmation pour les collégiennes et lycéennes.
 			</p>
 			<p class="style1">
-				On y apprend le Python, les bases de la programmation, de quoi se lancer dans des petit projets de son choix !
+				On y apprend les bases de la programmation avec le langage Python, et de quoi se lancer dans des petits projets de son choix !
 			</p>
 			<p class="style1">
-				Les stages sont gratuits, entièrement organisé par des bénévoles et l’association prologin.
+				Les stages sont gratuits, entièrement organisés par des bénévoles et l’association Prologin.
 			</p>
 			<p class="style2">
 				Prochains stages:<br />
@@ -60,8 +60,8 @@
 			<!-- Features -->
 				<section id="features">
 					<header class="style1">
-						<h2>Tout ce qu’il y a savoir sur les stages</h2>
-						<p>Pour toute autre question, contactez nous</p>
+						<h2>Tout ce qu’il faut savoir sur les stages</h2>
+						<p>Pour toute autre question, contactez-nous</p>
 					</header>
 
 					<div class="feature-list">
@@ -81,7 +81,7 @@
 									<h3 class="icon fa-euro-sign">Stage gratuit</h3>
 									<p>
 										Les stages sont gratuits et les repas offerts aux participantes.
-										L'hébergement et le transport jusqu'au lieu du stage n’est pas pris en charge par l’association.
+										L'hébergement et le transport jusqu'au lieu du stage ne sont pas pris en charge par l’association.
 										Mais si des questions financières t’empêcheraient de participer au stage, écris-nous à <a href="mailto:info@prologin.org">info@prologin.org</a> et nous discuterons de l’attribution éventuelle d’une bourse.
 									</p>
 								</section>
@@ -90,9 +90,9 @@
 								<section>
 									<h3 class="icon fa-frown">Pour celles qui ne peuvent plus participer</h3>
 									<p>
-										L’informatique ne t’es pas pour fermée autant !
-										N’hésite pas à découvrir les <ref>ressources recommandées pour débuter<ref> et si tu as moins de 20 ans, tu peux participer à la 26<sup>e</sup> édition <a href="{% url 'home' %}">du concours Prologin</a>.
-										La première phase de qualifications en ligne sont ouvertes.
+										L’informatique ne t’es pas fermée pour autant !
+										N’hésite pas à découvrir les <ref>ressources recommandées pour débuter<ref> et si tu as moins de 21 ans, tu peux participer à la 27<sup>e</sup> édition <a href="{% url 'home' %}">du concours Prologin</a>.
+										La première phase de qualification en ligne est ouverte.
 									</p>
 								</section>
 							</div>
@@ -100,7 +100,7 @@
 								<section>
 									<h3 class="icon fa-calendar">Le programme</h3>
 									<p>
-										Les stages durent une semaine au cours de laquelle sont proposés des travaux pratiques de programmation sur des sujets divers (introduction au Python, réseaux, web).
+										Les stages durent une semaine au cours de laquelle sont proposés des travaux pratiques de programmation sur des sujets divers (introduction à Python, réseaux, web).
 										Mais aussi des conférences données par des femmes travaillant dans l'informatique.
 										Enfin, la semaine se termine sur la mise en place d’un petit projet qui laisse place à la créativité.
 									</p>
@@ -152,9 +152,9 @@
 						<a href="{% url 'home' %}" class="image featured">
 							<img src="{% static 'gcc/img/stat_prologin.svg' %}" alt="" /></a>
 
-						<h3><a href="{% url 'home' %}">Prologin, une association crée en 1991</a></h3>
+						<h3><a href="{% url 'home' %}">Prologin, une association créée en 1991</a></h3>
 						<p>
-							L'association Prologin, créé en 1991 pour organiser le concours éponyme, organise depuis 2014 les stages Girls Can Code!.
+							L'association Prologin a été créée en 1991 pour organiser le concours national d'informatique, et se charge depuis 2014 des stages Girls Can Code!.
 						</p>
 						<ul class="actions">
 							<li><a target="_blank"  href="{% url 'home' %}" class="button style1">En Savoir Plus</a></li> {# TODO LIEN EDITIONS #}
@@ -213,7 +213,7 @@
 		<header class="style1">
 			<h2>Une question ?</h2>
 			<p>
-				N'hesitez pas à nous contacter.
+				N'hésitez pas à nous contacter.
 			</p>
 		</header>
 		<div class="row">
