gcc: add BNP as a sponsor

--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -203,6 +203,11 @@
 						<img alt="EPITA" src="{% static 'gcc/img/sponsors/epita.png' %}" style="max-width: 100%"/>
 					</a>
 				</div>
+				<div class="col-2 col-4-medium col-6-small">
+					<a href="https://group.bnpparibas/">
+						<img alt="BNP Paribas" src="{% static 'gcc/img/sponsors/bnp_paribas.png' %}" style="max-width: 100%"/>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
