gcc: start cleaning template: remove unused / split

--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -12,7 +12,11 @@
 		<title>{% block title %}Girls Can Code!{% endblock %}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/font-awesome.min.css' %}" />
+		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/grid.css' %}" />
 		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/main.css' %}" />
+		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/layout.css' %}" />
+		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/responsive.css' %}" />
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
