gcc: fix typos, formulation, grammar

--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -72,7 +72,7 @@
 									<h3 class="icon fa-graduation-cap">Prérequis</h3>
 									<p>
 										Le stage a pour but de s’adapter au niveau de chacune donc pas besoin d’avoir un niveau minimum en informatique avant le stage.
-										Par contre c’est toujours mieux de savoir dans quoi on se lance donc va faire un tour sur <a href="{% url 'gcc:ressources' %}">les ressources</a> qu’on recommande pour commencer !
+										Par contre, c’est toujours mieux de savoir dans quoi on se lance donc va faire un tour sur <a href="{% url 'gcc:ressources' %}">les ressources</a> qu’on recommande pour commencer !
 									</p>
 								</section>
 							</div>
@@ -90,7 +90,7 @@
 								<section>
 									<h3 class="icon fa-frown">Pour celles qui ne peuvent plus participer</h3>
 									<p>
-										L’informatique ne t’es pas fermée pour autant !
+										L’informatique ne t’es pas fermé pour autant !
 										N’hésite pas à découvrir les <ref>ressources recommandées pour débuter<ref> et si tu as moins de 21 ans, tu peux participer à la 27<sup>e</sup> édition <a href="{% url 'home' %}">du concours Prologin</a>.
 										La première phase de qualification en ligne est ouverte.
 									</p>
@@ -100,7 +100,7 @@
 								<section>
 									<h3 class="icon fa-calendar">Le programme</h3>
 									<p>
-										Les stages durent une semaine au cours de laquelle sont proposés des travaux pratiques de programmation sur des sujets divers (introduction à Python, réseaux, web).
+										Les stages durent une semaine, au cours de laquelle sont proposés des travaux pratiques de programmation sur des sujets divers (introduction à Python, réseaux, web).
 										Mais aussi des conférences données par des femmes travaillant dans l'informatique.
 										Enfin, la semaine se termine sur la mise en place d’un petit projet qui laisse place à la créativité.
 									</p>
