--- a/prologin/gcc/templates/gcc/editions/index.html
+++ b/prologin/gcc/templates/gcc/editions/index.html
@@ -17,7 +17,7 @@
 					<div class="col-8 col-8-medium off-0-small col-12-small">
 						<div style="min-height: 100%; text-align:left;">
 							<p style="font-size: 1.1em;">
-								Cette année, l'organisation d’un stage Girls Can Code! à <strong>Nantes</strong> est délégué à l’association Adn-ouest Atlantic 2020, Prologin quant à elle organise à nouveau les stages de <strong>Paris</strong> et <strong>Lyon</strong>.<br />
+								Cette année, l'organisation d’un stage Girls Can Code! à <strong>Nantes</strong> est délégué à l’association Adn-ouest Atlantic 2020. Prologin quant à elle organise à nouveau les stages de <strong>Paris</strong> et <strong>Lyon</strong>.<br />
 								Ces stages qui accueillent au total <strong>70 participantes</strong> voient l’arrivée d’un TP sur les <strong>microcontrôleurs microbit</strong> qui, avec le TP jeux vidéo, donnent la possibilité d’exprimer sa créativité.
 							</p>
 							<div style="overflow-x: hidden; white-space: nowrap;">
@@ -40,7 +40,7 @@
 				<div class="off-1 col-8 col-8-medium off-0-small col-12-small">
 					<div style="min-height: 100%; text-align:left;">
 						<p style="font-size: 1.1em;">
-							En 2017, Prologin se lance un grand défi, l’organisation de 3 stages Girls Can Code!, un à <strong>Bordeaux</strong> en juillet et deux autres à <strong>Paris</strong> et <strong>Lyon</strong> en parallèle pendant la dernière semaine d'août, ils ont réuni un total de <strong>52 participantes</strong> !
+							En 2017, Prologin se lance un grand défi, l’organisation de 3 stages Girls Can Code!, un à <strong>Bordeaux</strong> en juillet et deux autres à <strong>Paris</strong> et <strong>Lyon</strong> en parallèle pendant la dernière semaine d'août. Ils ont réuni un total de <strong>52 participantes</strong> !
 						</p>
 						<div style="overflow-x: hidden; white-space: nowrap;">
 							<a href="">
@@ -67,7 +67,7 @@
 					<div style="min-height: 100%; text-align: center;">
 						<p style="font-size: 1.1em;">
 							Les <strong>18 participantes</strong> avaient cette année des niveaux très hétéroclytes, le stage s’est donc organisé par groupes de niveaux.
-							Le stage a vue l’arrivée d’un <strong>TP réseau</strong> qui consiste en la création d'un petit client de messagerie.
+							Le stage a vu l’arrivée d’un <strong>TP réseau</strong> qui consiste en la création d'un petit client de messagerie.
 						</p>
 						<a href="https://flic.kr/s/aHskCyYBke">
 							<img style="max-height: 400px; max-width: 100%;" src="{% static 'gcc/img/photos/2016.jpg' %}" />
